<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trail</string>
    <string name="action_comment">Add comment</string>
    <string name="action_comment_fail">Unable to send comment. Please try again later</string>
    <string name="http_fail_generic">Unable to contact server. Please check your internet connection and try again</string>
    <string name="comment_add_success">Your comment was added successfully</string>
    <string name="title_activity_add_comment">Leave a Mark</string>
    <string name="hello_world">Hello world!</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="add_comment">Add comment</string>
    <string name="add">Add</string>
    <string name="fail_generic">The application failed unexpectedly</string>
    <string name="title">Title</string>
    <string name="activate_gps">Please enable GPS before using Trail</string>
    <string name="server_host">http://www.prenderj.co.uk:30102</string>
    <string name="add_recording">Add recording</string>
    <string name="add_image">Add image</string>
    <string name="missing_argument">Please fill in all fields</string>
    <string name="io_error">Problem writing to disk</string>
    <string name="attachment_added">Attachment added</string>
    <string name="action_home">Centered on Lancaster</string>
    <string name="view_attachment">View attachment</string>
    <string name="placeholder">...</string>
    <string name="refresh">Refresh</string>

</resources>
