<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/center_on_home" android:icon="@drawable/ic_action_lancaster_university_logo" android:showAsAction="always" android:enabled="true" android:visible="true" android:menuCategory="alternative"></item><item android:id="@+id/add_comment" 
        android:showAsAction="always" 
        android:titleCondensed="@string/add" 
        android:title="@string/add_comment"
        android:menuCategory="alternative"
        android:visible="true"
        android:enabled="true"
        android:icon="@drawable/ic_menu_content_edit"></item>
    <item android:id="@+id/refresh" android:title="@string/refresh" android:menuCategory="alternative" android:titleCondensed="@string/refresh" android:icon="@drawable/ic_action_av_replay" android:enabled="true" android:visible="true" android:showAsAction="always"></item>
    

</menu>
